# EAGLE

./: .gitignore  CMakeLists.txt  MathJax  README.md  setup.py
C/: attitude-controller.c  attitude-controller.h  attitude.c  attitude.h  controllers.c  controllers.h  include  quaternion.c  quaternion.h  src
Plotter/: SocketSender.py
Plotter/dronecube/: Quaternion.pde  dronecube.pde
Plotter/droneplotter/: droneplotter.pde
Python/: Drone-Simulator.ipynb  DroneLogLoader.ipynb  DronePlotter.py  Lambda from log data step response.ipynb  SelectFilesButton.py
Python/plot-simulation/: Drone-Simulator.ipynb  DroneParamsAndMatricesBuilder.py  DronePlotter.py  Reference.py  UpdatePlot.py  main.py  quat_params.py
Python/plot_simulation/: DroneParamsAndMatricesBuilder.py  Reference.py  main.py
Scripts/: Install-Python.sh
applications/: CMakeLists.txt
applications/genetics/: main-chromosome.cpp
applications/hello-world/: main.cpp
applications/plot-log/: main.cpp
applications/plot-simulation/: InputSignals.hpp  main.cpp
applications/py-plot-simulation/: CMakeLists.txt  main.cpp  main.py
applications/tuner/: Cost.cpp  Cost.hpp  CostWeights.hpp  DisplayReference.cpp  PrintBest.cpp  PrintBest.hpp  TunerConfig.cpp  Weights.hpp  tuner.cpp
argparser/: CMakeLists.txt
argparser/include/: ArgParser.hpp
argparser/src/: ArgParser.cpp
cmake.example/: FindCControllers.cmake  FindLogger.cmake
config/: CMakeLists.txt  Config.cpp  Config.hpp  CostWeights.hpp
config/include/: Config.hpp
config/src/: Config.cpp
csv/: CMakeLists.txt
csv/include/: PrintCSV.hpp
doc/: Doxyfile
doc/latex/: refman.tex
drone/: CMakeLists.txt
drone-log-loader/: CMakeLists.txt
drone-log-loader/include/: DroneLogLoader.hpp
drone-log-loader/src/: DroneLogLoader.cpp
drone-log-loader/test/: test-DroneLogLoader.cpp
drone-plottable/: CMakeLists.txt
drone-plottable/include/: DronePlot.hpp
drone/include/: Def.hpp  Drone.hpp  DroneParamsAndMatrices.hpp  DroneStateControlOutput.hpp  KalmanObserver.hpp  LQRController.hpp  MotorControl.hpp
drone/include/C-code-wrappers/: CKalmanObserver.hpp  CLQRController.hpp
drone/src/: Drone.cpp  DroneParamsAndMatrices.cpp
drone/src/C-code-wrappers/: CKalmanObserver.cpp  CLQRController.cpp
drone/test/: CMakeLists.txt  test-C-Controllers.cpp
fileloader/include/: FileLoader.hpp
fileloader/src/: FileLoader.cpp
fileloader/test/: test.matrix
genetic-tuner/: CMakeLists.txt  PieterNotes.txt
genetic-tuner/include/: Chromosome.hpp  GeneticAlgorithm.hpp  Member.hpp
genetic-tuner/src/: Dummy.cpp
genetic-tuner/test/: CMakeLists.txt  test-Chromosome.cpp
main/: ANSIColors.hpp  Config.cpp  Config.hpp  ContinuousLQRController.hpp  Controller.hpp  Def.hpp  Drone.cpp  Drone.hpp  DroneLogLoader.cpp  DroneLogLoader.hpp  DroneStateControlOutput.hpp  FullKalman.hpp  InputSignals.hpp  K.cpp  K.hpp  KalmanObserver.hpp  LQRController.hpp  Model.hpp  MotorControl.hpp  NonLinearFullDroneModel.hpp  NonLinearFullModel.hpp  Params.hpp  Plot.cpp  Plot.hpp  PlotStepReponse.hpp  PrintCSV.hpp  StepResponseAnalyzer.hpp  StepResponseAnalyzer.ipp  main.cpp
matrix/: CMakeLists.txt
matrix/include/: Array.hpp  ArrayHelpers.hpp  DLQE.hpp  DLQR.hpp  LQR.hpp  LeastSquares.hpp  Matrix.hpp
matrix/test/: test-AlmostEqual.cpp  test-LQR.cpp  test-LeastSquares.cpp  test-Matrix.cpp
new/: CMakeLists.txt
new/argparser/: CMakeLists.txt
new/argparser/test/: CMakeLists.txt  test-ArgParser.cpp
new/drone-log-loader/: CMakeLists.txt
new/drone-log-loader/src/: DroneLogLoader.cpp
new/fileloader/: CMakeLists.txt
new/fileloader/test/: CMakeLists.txt  test-FileLoader.cpp
new/ode/: CMakeLists.txt
new/ode/include/: DormandPrince.hpp  ODEOptions.hpp
new/ode/test/: CMakeLists.txt  test-ODEEval.cpp
new/quaternion/: CMakeLists.txt
new/quaternion/include/: Quaternion.hpp  QuaternionStateAddSub.hpp
new/quaternion/src/: Quaternion.cpp
new/quaternion/test/: test-Quaternion.cpp
new/util/: CMakeLists.txt
new/util/include/: ANSIColors.hpp  Degrees.hpp  PerfTimer.hpp
ode/: CMakeLists.txt
plot/: CMakeLists.txt
plot/include/: DronePlot.hpp  Plot.hpp  PlotHelpers.hpp  PlotStepResponse.hpp  StepResponseAnalyzerPlotter.hpp
plot/src/: Plot.cpp  Plot.py  PlotHelpers.cpp  PlotStepResponse.cpp
py-drone/: CMakeLists.txt  README.md
py-drone/include/: PyDrone.hpp
py-drone/src/: PyDrone.module.cpp
py-drone/test/: CMakeLists.txt  test-PyDrone.cpp
py-drone/test/ParamsAndMatrices/: Dp.double  I.matrix  I_inv.matrix  k1.double  k2.double
py-drone/test/ParamsAndMatrices/altitude/: Aa.matrix  Ad.matrix  Ba.matrix  Bd.matrix  Cd.matrix  Ts.double
py-drone/test/ParamsAndMatrices/attitude/: Aa.matrix  Ad.matrix  Ba.matrix  Bd.matrix  Cd.matrix  Da.matrix  Ts.double  gamma_n.matrix  gamma_u.matrix
py-matrix/: CMakeLists.txt  README.md
py-matrix/include/: PyMatrix.hpp
py-matrix/src/: PyMatrix.cpp
py-matrix/test/: CMakeLists.txt  test-PyMatrix.cpp
quaternion/: CMakeLists.txt
simulation/: CMakeLists.txt
simulation/include/: DiscreteController.hpp  Model.hpp  NoiseGenerator.hpp  System.hpp
src/: AlmostEqual.hpp  Array.hpp  DormandPrince.hpp  LeastSquares.hpp  Matrix.hpp  Params.hpp  Quaternion.hpp  debug.hpp
step-response/: CMakeLists.txt
step-response/include/: StepResponseAnalyzer.hpp
step-response/src/: StepResponseAnalyzer.ipp
test/: test-ArgParser.cpp  test-Array.cpp  test-DLQE.cpp  test-DoPri.cpp  test-FileLoader.cpp  test-LQR.cpp  test-LeastSquares.cpp  test-Matrix.cpp  test-MeanSquareError.cpp  test-ODEEval.cpp  test-QR.cpp  test-Quaternion.cpp  test-System.cpp  test-main.cpp
tilt-correction/: CMakeLists.txt
tilt-correction/test/: CMakeLists.txt  test-TiltCorrection.cpp
tuner/: Config.cpp  Config.hpp  Cost.cpp  Cost.hpp  DisplayReference.cpp  DisplayReference.hpp  PrintBest.cpp  PrintBest.hpp  TunerConfig.cpp  TunerConfig.hpp  TunerDrone.hpp  Weights.hpp  output.tmp  tuner.cpp
utilities/: CMakeLists.txt
utilities/include/: Degrees.hpp  MeanSquareError.hpp  Square.hpp
utilities/test/: CMakeLists.txt  test-MeanSquareError.cpp
(+73 files in other folders)
